Fix header align

--- a/style.css
+++ b/style.css
@@ -3,17 +3,20 @@
     padding: 0 24px;
 }
 
+
 * {
     border: 0;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-
+    color: #4a4a4a;
+    font-family: Roboto, sans-serif;
+    width: 100%;
 }
 
 /*Header*/
 header {
     background-color: #f8f8f8;
-    border: 1px solid #000000;
     position: fixed;
     align-items: center;
     height: 64px;
@@ -22,46 +25,79 @@ header {
 
 ul {
     display: flex;
-    justify-content: space-between;
-    padding: 0 16px;
     align-items: center;
+    height: auto;
+    justify-content: space-between;
     list-style-type: none;
-    width: auto;
 }
-
 a {
     display: flex;
     text-decoration: none;
+    align-items: center;
     color: #4a4a4a;
 }
 
-#logo-text {
-    text-transform: uppercase;
-    font-size: 16px;
+.logo-desktop {
+    display: none;
 }
 
 .icon {
+    display: flex;
+    align-items: center;
     height: 32px;
 }
 
 .icon-text {
     display: none;
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
 }
 
 
 @media only screen and (min-width: 768px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+    }
+    nav {
+        width: auto;
+    }
+    li {
+        width: fit-content;
+        padding: 0 8px;
+    }
+    .logo-desktop {
+        display: flex;
+        align-items: center;
+        width: auto;
+    }
     .icon {
         display: none;
     }
     .icon-text {
-        display: inline-block;
+        display: flex;
+        font-size: 16px;
+    }
+    #logo {
+        height: 32px;
+    }
+    #logo-text {
+        text-transform: uppercase;
+        color: #4a4a4a;
+    }
+    #academy-light {
+        color: #9b9b9b;
     }
 }
 
 /*Banner*/
+#banner-img {
+    position: relative;
+    margin-top: 64px;
+    width: 100%;
+}
 
+h2 {
+    padding-bottom: 24px;
+}
 
 /*Articles*/
 
